--- a/src/app/profile/profile.page.scss
+++ b/src/app/profile/profile.page.scss
@@ -95,6 +95,7 @@ ion-toolbar {
       border-radius: 0 0 16px 16px;
       box-shadow: 0 2px 6px rgba(0, 0, 0, 0.05);
       position: relative;
+      bottom: 13px;
   
       .avatar {
         width: 60px;
@@ -176,7 +177,7 @@ ion-toolbar {
     }
   }
   
-  // Mobile adjustments (optional)
+
   @media screen and (max-width: 480px) {
     .user-section {
       flex-direction: row;
