--- a/src/app/accommodation/accommodation.page.html
+++ b/src/app/accommodation/accommodation.page.html
@@ -12,10 +12,10 @@
 <ion-content [fullscreen]="true" class="accommo-content">
   <div class="accommo-wrapper">
 
-    <!-- Search -->
-    <ion-searchbar [(ngModel)]="searchTerm" placeholder="Search by name or location..." debounce="300" (ionInput)="applyFilter()"></ion-searchbar>
+    
+    <ion-searchbar [(ngModel)]="searchTerm" placeholder="Search by name, location or description..." debounce="300" (ionInput)="applyFilter()"></ion-searchbar>
 
-    <!-- Filter Buttons -->
+    
     <div class="filter-buttons">
       <ion-chip *ngFor="let category of categories" (click)="filterByCategory(category)">
         <ion-label>{{ category }}</ion-label>
@@ -24,29 +24,34 @@
 
     <p class="accommo-title">Find Your Stay</p>
 
-    <!-- Accommodation Cards -->
+    
     <ion-card class="accommodation-card" *ngFor="let item of filteredAccommodations">
       <ion-img [src]="item.image" alt="{{item.name}}"></ion-img>
-
       <ion-card-header>
         <ion-card-title>{{ item.name }}</ion-card-title>
         <ion-card-subtitle>{{ item.location }}</ion-card-subtitle>
       </ion-card-header>
-
       <ion-card-content>
-        <p class="price">From ₹{{ item.price }}/night</p>
-        <p>{{ item.description }}</p>
+         <p class="hotel-description">{{ item.description }}</p>
+        
+        <div class="distance-info">
+          <p><ion-icon name="pin-outline"></ion-icon> {{ item.distanceVenue }} from Venue</p>
+          <p><ion-icon name="airplane-outline"></ion-icon> {{ item.distanceAirport }} from Airport</p>
+        </div>
+
+        
+        <div class="room-details">
+          <p><strong>Room Type:</strong> {{ item.roomType }}</p>
+          <p><strong>Occupancy:</strong> {{ item.occupancy }}</p>
+          <p><strong>Rate:</strong> ₹{{ item.rate }}/night</p>
+        </div>
 
         <div class="card-actions">
           <ion-button size="small" fill="outline" color="success" (click)="viewOnMap(item)">
             View on Map
           </ion-button>
-          <ion-button size="small" color="tertiary" (click)="bookNow(item)">
-            Book Now
-          </ion-button>
         </div>
       </ion-card-content>
     </ion-card>
-
   </div>
 </ion-content>
