--- a/src/app/components/login/login.page.scss
+++ b/src/app/components/login/login.page.scss
@@ -6,138 +6,171 @@
   background-repeat: no-repeat;
   background-position: center center;
   color: #fff;
+}
 
 ion-content::part(background) {
   display: none !important;
 }
 
-  ion-content {
-    --keyboard-offset: 0px; // allow Ionic to push content when keyboard appears
-    display: flex;
-    justify-content: center;
-    align-items: flex-start;
-    position: relative;
-    padding-top: 30px;
+ion-content {
+  --keyboard-offset: 0px; 
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  position: relative;
+  padding-top: 30px;
+}
+
+.content-wrapper {
+  background: #fff;
+  padding: 40px 20px;
+  border-radius: 40px;
+  width: 100%;
+  box-shadow: 0 8px 24px rgba(0, 0, 0, 0.1);
+  margin-top: 20%;
+  margin-bottom: env(safe-area-inset-bottom);
+
+  @media (min-width: 768px) {
+    max-width: 500px;
+    margin: auto;
+    border-radius: 20px;
   }
 
-  ion-header {
-    --background: transparent;
-    --color: #000;
-
-    ion-title {
-      font-weight: bold;
-      font-size: 20px;
-      color: #000;
-    }
-
-    ion-icon {
-      font-size: 24px;
-      color: #000;
-    }
-
-    ion-toolbar {
-      --padding-start: 16px;
-      --padding-end: 16px;
-    }
+  @media (min-width: 1024px) {
+    max-width: 480px;
+    padding: 40px 32px;
   }
+}
 
-  .content-wrapper {
-    background: #fff;
-    padding: 50px 20px;
-    border-radius: 40px;
-    width: 100%;
-    box-shadow: 0 8px 24px rgba(0, 0, 0, 0.1);
-    margin-top: 23%; 
-    margin-bottom: env(safe-area-inset-bottom); 
+.top-bar {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 16px;
 
-    @media (min-width: 768px) {
-      max-width: 500px;
-      margin: auto; 
-      border-radius: 20px;
-    }
-
-    @media (min-width: 1024px) {
-      max-width: 480px;
-      padding: 40px 32px;
-    }
-  }
-
-  .top-bar {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-bottom: 16px;
-
-    .custom-heading {
-      font-size: 25px;
-      font-weight: 600;
-      color: #000;
-      margin: 0 auto;
-      
-    }
-
-    .close-icon {
-      font-size: 24px;
-      color: #000;
-      cursor: pointer;
-    }
-  }
-
-  .logo-container {
-    display: flex;
-    justify-content: center;
-    margin-bottom: 24px;
-    img {
-      width: 130px;
-      height: auto;
-      filter: drop-shadow(0 0 8px rgba(0, 0, 0, 0.15));
-    }
-  }
-
-  .title {
-    font-size: 20px;
+  .custom-heading {
+    font-size: 25px;
     font-weight: 600;
-    text-align: center;
-    color: #111;
-    margin-bottom: 6px;
-  }
-
-  .subtitle {
-    text-align: center;
-    font-size: 14px;
-    color: #555;
-    margin-bottom: 20px;
-  }
-
-  form {
-    display: flex;
-    flex-direction: column;
-    gap: 16px;
-  }
-
-  ion-item {
-    --background: #f7f7f7;
-    border-radius: 10px;
-    --inner-border-width: 0;
-    --highlight-height: 0;
-    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.05);
-  }
-
-  ion-label {
-    color: #555;
-  }
-
-  ion-input {
     color: #000;
+    margin: 0;
+  }
+}
+
+.logo-container {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 24px;
+
+  img {
+    width: 130px;
+    height: auto;
+    filter: drop-shadow(0 0 8px rgba(0, 0, 0, 0.15));
+  }
+}
+
+.title {
+  font-size: 20px;
+  font-weight: 600;
+  text-align: center;
+  color: #111;
+  margin-bottom: 6px;
+}
+
+.subtitle {
+  text-align: center;
+  font-size: 14px;
+  color: #555;
+  margin-bottom: 20px;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+}
+
+ion-item {
+  --min-height:15px; 
+  --padding-start: 8px;
+  --padding-end: 8px;
+  --inner-padding-top:1px;
+  --inner-padding-bottom: 1px;
+  border-radius: 6px;
+  --background: #f5f1f1;
+  border: 1px solid rgba(128, 128, 128, 0.15);
+  color: #353535;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.05);
+}
+
+ion-label {
+  font-size: 13px;      
+  line-height: 13px;    
+  transform: translateY(2px); 
+}
+
+ion-input {
+  font-size: 13px;
+  padding: 6px 0;      
+}
+
+.submit-button {
+  --background: #000;
+  border-radius: 12px;
+  font-weight: 600;
+  letter-spacing: 0.3px;
+  margin-top: 10px;
+  color: #fff;
+}
+
+.error-message {
+  color: red;
+  font-weight: 500;
+  font-size: 13px;
+  margin-left: 5px;
+}
+
+.login-tabs {
+  display: flex;
+  margin: 20px 0;
+  border-radius: 12px;
+  overflow: hidden;
+  border: 1px solid #ccc;
+
+  .tab {
+    flex: 1;
+    text-align: center;
+    padding: 12px 0;
+    font-weight: 600;
+    cursor: pointer;
+    background: #f5f5f5;
+    color: #333;
+    transition: all 0.3s ease;
+
+    &.active {
+      background: #000;
+      color: #fff;
+    }
+  }
+}
+
+.guest-actions {
+  margin-top: 20px;
+  display: flex;
+  flex-direction: row;  
+  gap: 12px;
+
+  .contin, .reg {
+    flex: 1;
+    font-weight: 600;
+    border-radius: 6px;
   }
 
-  .submit-button {
-    --background: #000000;
-    border-radius: 12px;
-    font-weight: 600;
-    letter-spacing: 0.3px;
-    margin-top: 10px;
-    color: #fff;
+  .contin {
+    --background: #ffffff; 
+    --color: #000;       
   }
-  .error-message { color: red; font-weight: 500;}
+
+  .reg {
+    --background: #97c93c; 
+    --color: #fff;         
+  }
 }
