--- a/src/app/splash/splash.page.scss
+++ b/src/app/splash/splash.page.scss
@@ -17,6 +17,7 @@
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
+    margin-top: -10px;
 
     .logo {
       width: 180px;
@@ -100,7 +101,7 @@
   }
 
   // -----------------------------
-  // 📱 Mobile (up to 599px)
+  //  Mobile (up to 599px)
   // -----------------------------
   @media (max-width: 599px) {
     .background {
@@ -139,7 +140,7 @@
   }
 
   // -----------------------------
-  // 💻 Tablet (600px – 1023px)
+  //  Tablet (600px – 1023px)
   // -----------------------------
   @media (min-width: 600px) and (max-width: 1023px) {
     .background {
@@ -163,7 +164,7 @@
   }
 
   // -----------------------------
-  // 🖥️ Large Screens (1024px+)
+  //  Large Screens (1024px+)
   // -----------------------------
   @media (min-width: 1024px) {
     .background {
