--- a/src/app/sponsors/sponsors.page.scss
+++ b/src/app/sponsors/sponsors.page.scss
@@ -6,10 +6,10 @@
   background-position: center center;
   background-size: cover;
   background-attachment: fixed;
-  font-family: 'Orbitron', sans-serif; // futuristic font feel
+  font-family: 'Orbitron', sans-serif; 
 }
 
-/* HEADER STYLING */
+
 ion-header,
 ion-toolbar {
   --ion-toolbar-background: transparent !important;
@@ -54,7 +54,6 @@ ion-toolbar {
 
 
 
-/* TIME BLOCK (CATEGORY CARD) */
 .time-block {
   margin-bottom: 15px;
   background: rgba(255, 255, 255, 0.05);
